<resources>
    <string name="app_name">Evans Project 1 </string>
    <string name="contact_name">Contact Name</string>
    <string name="enter_contact_name">Enter contact name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="submit">Submit</string>
    <string name="contacts">Contacts</string>
    <string name="add_email">Add Email</string>
    <string name="contact_list">Contact List</string>
    <string name="add_phone">Add Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_contact_namee">Enter contact name</string>
    <string name="contact_namee">Contact Name</string>
    <string name="submitt">Submit</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
</resources>